Remove embedded newlines from sysctl variable descriptions

PR:		112556
Submitted by:	Willem Jan Withagen <wjw@digiware.nl> (earlier version)
Reported by:	Willem Jan Withagen, ighighi@gmail.com
MFC after:	3 weeks
Sponsored by:	Spectra Logic Corp

Former-commit-id: 3b29217d2dab79216379cdba0705bf45061f2b6e